--- a/.github/workflows/homework-validation.yml
+++ b/.github/workflows/homework-validation.yml
@@ -3,7 +3,7 @@ name: Git Homework Validation
 on:
   push:
     branches:
-      - '*'
+      - "*"
 
 jobs:
   validate-homework:
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Get all branches
+          fetch-depth: 0 # Get all branches
 
       - name: Check if branch is not 'main'
         id: branch-check
@@ -20,19 +20,22 @@ jobs:
           CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
           if [[ "$CURRENT_BRANCH" == "main" ]]; then
             echo "::error::You must create a branch!"
-            echo "SCORE=0" >> $GITHUB_ENV
+            echo "SCORE=0" >> "$GITHUB_ENV"
           else
-            echo "SCORE=50" >> $GITHUB_ENV
+            echo "SCORE=50" >> "$GITHUB_ENV"
           fi
 
       - name: Check if file is filled
         id: file-check
         run: |
-          if grep -q "<your-name>" c-snippets/Day-3/home-work/home-work.txt || grep -q "<city>" c-snippets/Day-3/home-work/home-work.txt || grep -q "<computer-science OR physical-science>" c-snippets/Day-3/home-work/home-work.txt; then
+          if grep -q "<your-name>" c-snippets/Day-3/home-work/home-work.txt || \
+             grep -q "<city>" c-snippets/Day-3/home-work/home-work.txt || \
+             grep -q "<computer-science OR physical-science>" c-snippets/Day-3/home-work/home-work.txt; then
             echo "::error::You must fill the required details!"
           else
-            echo "SCORE=$(($SCORE + 50))" >> $GITHUB_ENV
+            SCORE=$((SCORE + 50))
+            echo "SCORE=$SCORE" >> "$GITHUB_ENV"
           fi
 
       - name: Print Final Score
-        run: echo "Final Score: $SCORE"
+        run: "echo 'Final Score: $SCORE'"
